welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:13: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
				if(a+b = 10)
                                    ^makes10:18: error: type mismatch;
 found   : Unit
 required: Boolean
return 				
^